# ADead-BIB

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_v7.md  Arquitectura_3.md  CMakeLists.txt  Cargo.toml  Como se usa.md  Como_usar.md  ESTADO.md  GUIA_ES.md  GUIDE_EN.md  LICENSE  Nuevos-Elementos.md  QUE_FALTA.md  README.md  ROADMAP.md  Resultados.md  Rutas.md  ast.txt  build.ps1  hello.adB  ideas-2.md  ideas-4.md  ideas.md  ir_output.txt  reportes.md  reportes_js.md  test_lexer.rs  test_limpio.c  test_uaf.c  tmp_c.txt  tmp_c_results.txt  tmp_cpp.txt  tmp_run_c.txt  tmp_stdout.txt  ventajas.md
BG — Binary Guardian/: Cargo.toml  Ideas.md  README.md
BG — Binary Guardian/src/: analyzer.rs  arch_map.rs  binary_loader.rs  capability.rs  lib.rs  main.rs  policy.rs
FastOS/kernel/: Cargo.toml  boot64.c  compositor.c  cpuid.c  hotplug.c  interrupts.c  kernel.c  kernel64.asm  kernel64.c  kernel_all.c  kernel_main.c  kernel_simple.c  keyboard.c  linker.ld  loader.c  main.c  panic.c  po_loader.c  po_loader_full.c  scheduler.c  syscall.c  vfs.c  vga.c  window.c  x86_64-fastos.json
FastOS/kernel/apps/: terminal.c
FastOS/kernel/cpu/: ryzen.c
FastOS/kernel/drivers/: fb.c  gpu.c  gpu_sync.c  keyboard.c  mouse.c  mouse_drv.c  timer.c
FastOS/kernel/gui/: api.c  desktop.c  font.c  svg.c  wm.c
FastOS/kernel/interrupts/: idt.c
FastOS/kernel/loader/: po_loader.c  po_loader.h
FastOS/kernel/memory/: e820.c  heap.c  heap.h  memory_init.c
FastOS/kernel/rust/: Cargo.toml  safety_layer.rs
FastOS/kernel/rust/src/: allocator.rs  buffer.rs  lib.rs  memory.rs  page_table.rs
FastOS/kernel/security/: bg256.c  bg256.h
FastOS/kernel/src/: boot.rs  desktop.rs  installer.rs  keyboard.rs  login.rs  main.rs  panic.rs  shell.rs  startmenu.rs  vga.rs  window.rs
FastOS/kernel/src/apps/: calc.rs  editor.rs  files.rs  mod.rs  settings.rs  sysinfo.rs  terminal.rs
FastOS/kernel/src/arch/: mod.rs
FastOS/kernel/src/core/: interrupts.rs  memory.rs  mod.rs
FastOS/kernel/src/desktop_engine/: compositor.rs  cursor.rs  mod.rs  shell.rs  wm.rs
FastOS/kernel/src/drivers/: aexe.rs  ahci.rs  audio.rs  disk.rs  framebuffer.rs  gpu.rs  hdmi.rs  keyboard.rs  mod.rs  mouse.rs  network.rs  spirv.rs  timer.rs  usb.rs
FastOS/kernel/src/gfx_apps/: calculator.rs  editor.rs  file_manager.rs  mod.rs  settings.rs  sysinfo.rs  terminal.rs
FastOS/kernel/src/kernel_core/: memory.rs  mod.rs  process.rs  scheduler.rs
FastOS/security/: Cargo.toml  bg_core.c  bg_fastos.c  bg_levels.c  bg_preexec.c
FastOS/security/bg/: analyzer.rs  binary_loader.rs  lib.rs  policy.rs
GAME/: Cargo.toml  README.md
GAME/src/: game.rs  lib.rs  main.rs
GAME/src/adead/: game_logic.adB
GAME/src/ecs/: components.rs  entity.rs  mod.rs  world.rs
GAME/src/engine/: gpu_renderer.rs  input.rs  mod.rs  renderer.rs  time.rs  window.rs
GAME/src/engine/shaders/: rect.wgsl
GAME/src/games/: flappy.rs  flappy_gpu.rs  mod.rs
GAME/src/systems/: collision.rs  mod.rs  physics.rs  render.rs
OS Stack New/kernel/: Cargo.toml
OS Stack New/kernel/src/: main.rs  panic.rs  vga.rs
Sistema operativo/FastOS/: Cargo.toml  Makefile  README.md  build.ps1  build.rs  build_image.rs  build_uefi.rs  linker.ld  make_boot.ps1  make_image.ps1  run.ps1  x86_64-fastos.json
Sistema operativo/FastOS/boot/: Cargo.toml  bootloader.asm
Sistema operativo/FastOS/boot/src/: main.rs
Sistema operativo/FastOS/docs/: ROADMAP_FASTOS.md  WGPU_INTEGRATION.md
Sistema operativo/FastOS/drivers/: disk.rs  display.rs  mod.rs
Sistema operativo/FastOS/fs/: mod.rs  vfs.rs
Sistema operativo/FastOS/image_builder/: Cargo.toml
Sistema operativo/FastOS/image_builder/src/: main.rs
Sistema operativo/FastOS/kernel/: adead_bib.rs  desktop.rs  framebuffer.rs  framebuffer_double.rs  gpu.rs  heap.rs  idt.rs  interrupts.rs  keyboard.rs  keyboard_new.rs  loader.rs  main.rs  memory.rs  mouse.rs  shell.rs  syscall.rs  timer.rs  vfs.rs  vga.rs
Sistema operativo/FastOS/kernel/drivers/: mod.rs
Sistema operativo/FastOS/src/: lib.rs
Sistema operativo/FastOS/userspace/: shell.rs
integrations/rust/: Cargo.toml  README.md
integrations/rust/src/: lib.rs
src/rust/: ARCHITECTURE.md  Cargo.toml  README.md  adead_test_tmp.txt  builder.rs  cuda_test.rs  cuda_test_v2.rs  lib.rs  main.rs
src/rust/backend/: codegen.rs  codegen_v2.rs  elf.rs  mod.rs  pe.rs  pe_minimal.rs  pe_valid.rs
src/rust/backend/cpu/: binary_raw.rs  codegen.rs  codegen_v2.rs  elf.rs  fastos_format.rs  flat_binary.rs  iat_registry.rs  microvm.rs  mod.rs  os_codegen.rs  pe.rs  pe_compact.rs  pe_isa.rs  pe_tiny.rs  pe_ultra.rs  syscalls.rs  win32_resolver.rs
src/rust/backend/gpu/: bytecode_spirv.rs  compute.rs  gpu_detect.rs  memory.rs  metrics.rs  mod.rs  scheduler.rs  unified_pipeline.rs  vulkan_runtime.rs
src/rust/bg/: analyzer.rs  arch_map.rs  binary_loader.rs  capability.rs  mod.rs  policy.rs
src/rust/cache/: deserializer.rs  mod.rs  serializer.rs  validator.rs
src/rust/crates/ADead-BIB-Main/: Cargo.toml
src/rust/crates/adeb-backend-gpu/: Cargo.toml
src/rust/crates/adeb-core/: Cargo.toml
src/rust/crates/adeb-frontend-cpp/: Cargo.toml
src/rust/crates/libc/: README.md
src/rust/frontend/: ast.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs  types.rs
src/rust/frontend/c/: c_ast.rs  c_compiler_extensions.rs  c_lexer.rs  c_parser.rs  (+4 more)
src/rust/isa/: c_isa.rs  cpp_isa.rs  decoder.rs  encoder.rs  isa_compiler.rs  mod.rs  optimizer.rs  reg_alloc.rs
src/rust/middle/: mod.rs  strict_type_checker.rs
src/rust/optimizer/: binary_optimizer.rs  branch_detector.rs  branchless.rs  const_fold.rs  const_prop.rs  dead_code.rs  inline_exp.rs  mod.rs  redundant.rs  simd.rs
src/rust/output/: mod.rs  po.rs
src/rust/preprocessor/: dedup.rs  expander.rs  mod.rs  resolver.rs
src/rust/runtime/: cpu_detect.rs  dispatcher.rs  gpu_detect.rs  gpu_dispatcher.rs  gpu_misuse_detector.rs  mod.rs
src/rust/stdlib/: header_main.rs  integration_tests.rs  mod.rs
src/rust/toolchain/: calling_conventions.rs  cpp_name_mangler.rs  gcc_builtins.rs  llvm_attrs.rs  mod.rs  msvc_compat.rs
src/rust_v2/: Cargo.toml  README.md
(+1376 files in other folders)
