[package]
name = "adead-bib"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
object = { version = "0.36", features = ["write_core"] }  # Para generar PE/ELF
goblin = "0.7"   # Para parsing de binarios (opcional)
pelite = "0.10"  # Para generar PE válidos

[lib]
name = "adead_bib"
path = "src/rust/lib.rs"

[[bin]]
name = "adeadc"
path = "src/rust/main.rs"

[build-dependencies]
cc = "1.0"  # Para compilar C++

