[package]
name = "adead-bib"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
object = { version = "0.36", features = ["write_core"] }  # Para generar PE/ELF
goblin = "0.7"   # Para parsing de binarios (opcional)
pelite = "0.10"  # Para generar PE válidos

# Vulkan - Para exprimir GPU con fuerza
ash = "0.38"                    # Vulkan bindings (bajo nivel, máximo control)
gpu-allocator = "0.27"          # Allocator de memoria GPU

[lib]
name = "adead_bib"
path = "src/rust/lib.rs"

[[bin]]
name = "adeadc"
path = "src/rust/main.rs"

# ADead-BIB es 100% Rust - No requiere dependencias de C++

