[package]
name = "adead-vulkan-bird"
version = "0.2.0"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos <eddi.salazar.dev@gmail.com>"]
description = "Flappy Bird clone using GPU Direct (wgpu) + ADead-BIB Runtime"

[dependencies]
winit = "0.29"
wgpu = "0.19"              # GPU directo (Vulkan/DX12/Metal)
pollster = "0.3"           # Para async de wgpu
bytemuck = { version = "1.14", features = ["derive"] }  # Para vertex buffers
softbuffer = "0.4"         # Fallback software rendering
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
