[package]
name = "adead-bib"
version = "1.0.0"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos"]
description = "ADead-BIB Rust Integration - High-performance computing"
license = "MIT"
repository = "https://github.com/yourusername/ADead-BIB"

[lib]
name = "adead_bib"
path = "src/lib.rs"

[dependencies]
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
gpu = []
simd = []
