[workspace]
members = [
    "crates/app/ADead-BIB-Main",
    "crates/frontend/c/adeb-frontend-c",
    "crates/frontend/cpp/adeb-frontend-cpp",
    "crates/frontend/cuda/adeb-frontend-cuda",
    "crates/middle/adeb-middle",
    "crates/backend/cpu/adeb-backend-x64",
    "crates/backend/gpu/adeb-backend-gpu",
    "crates/shared/adeb-core",
    "crates/shared/adeb-platform",
    "crates/shared/adeb-stdlib",
    "crates/security/adeb-bg",
]
resolver = "2"

[workspace.package]
version = "7.0.0"
edition = "2021"
authors = ["ADead-BIB Team"]
license = "Techne (τέχνη)"
repository = "https://github.com/AndreeSalazar/ADead-BIB"
rust-version = "1.70"

[workspace.dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"

# Parallelism
rayon = "1.8"

# GPU (features enabled in individual crates)
wgpu = { version = "0.19" }
ash = { version = "0.37" }

# Internal crates
adeb-core = { path = "crates/shared/adeb-core" }
adeb-frontend-c = { path = "crates/frontend/c/adeb-frontend-c" }
adeb-frontend-cpp = { path = "crates/frontend/cpp/adeb-frontend-cpp" }
adeb-frontend-cuda = { path = "crates/frontend/cuda/adeb-frontend-cuda" }
adeb-middle = { path = "crates/middle/adeb-middle" }
adeb-backend-x64 = { path = "crates/backend/cpu/adeb-backend-x64" }
adeb-backend-gpu = { path = "crates/backend/gpu/adeb-backend-gpu" }
adeb-platform = { path = "crates/shared/adeb-platform" }
adeb-bg = { path = "crates/security/adeb-bg" }
adeb-stdlib = { path = "crates/shared/adeb-stdlib" }
