[package]
name = "fastos-kernel-safe"
version = "0.1.0"
edition = "2021"
authors = ["Eddi Andreé Salazar Matos"]
description = "FastOS Kernel - Rust Safety Layer for Critical Memory Operations"

[lib]
name = "fastos_safe"
crate-type = ["staticlib"]  # Genera .a para linkear con C

[features]
default = []
std = []  # Deshabilitado por defecto para kernel

[dependencies]
# No dependencies - freestanding kernel code

[profile.release]
opt-level = "z"      # Optimizar para tamaño
lto = true           # Link-time optimization
panic = "abort"      # No stack unwinding en kernel
codegen-units = 1    # Mejor optimización
