[package]
name = "ADead-BIB-Main"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADead-BIB CLI driver and build orchestration"

[[bin]]
name = "adB"
path = "src/main.rs"

[dependencies]
adeb-core = { workspace = true }
adeb-frontend-c = { path = "../adeb-frontend-c" }
adeb-frontend-cpp = { path = "../adeb-frontend-cpp" }
adeb-frontend-cuda = { path = "../adeb-frontend-cuda", optional = true }
adeb-middle = { path = "../adeb-middle" }
adeb-backend-x64 = { path = "../adeb-backend-x64" }
adeb-backend-gpu = { path = "../adeb-backend-gpu", optional = true }
adeb-bg = { path = "../adeb-bg" }
adeb-stdlib = { path = "../adeb-stdlib" }

clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["cuda", "gpu"]
cuda = ["adeb-frontend-cuda"]
gpu = ["adeb-backend-gpu"]
