[package]
name = "adeb-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADead-BIB standard library - C/C++ stdlib, GPU APIs"

[dependencies]
adeb-core = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
