[package]
name = "ADead-BIB-Main"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADead-BIB CLI driver and build orchestration"

[[bin]]
name = "adB"
path = "src/main.rs"

[dependencies]
adeb-core = { workspace = true }
adeb-frontend-c = { workspace = true }
adeb-frontend-cpp = { workspace = true }
adeb-frontend-cuda = { workspace = true, optional = true }
adeb-middle = { workspace = true }
adeb-backend-x64 = { workspace = true }
adeb-backend-gpu = { workspace = true, optional = true }
adeb-bg = { workspace = true }
adeb-stdlib = { workspace = true }
adeb-bridge = { workspace = true }

clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
cuda = ["adeb-frontend-cuda"]
gpu = ["adeb-backend-gpu"]
