[package]
name = "adeb-backend-x64"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADead-BIB x86-64 backend - ISA compiler, encoder, codegen"

[dependencies]
adeb-core = { workspace = true }
adeb-middle = { workspace = true }
adeb-platform = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
