[package]
name = "adeb-frontend-cpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ADead-BIB C++ frontend - lexer, parser, AST, IR lowering, OOP support"

[dependencies]
adeb-core = { workspace = true }
adeb-middle = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
